--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.amulyakhare.td"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 2
         versionName "1.0"
@@ -20,7 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':library')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
